# py-rollbar-client

./: CHANGELOG.md  CLAUDE.md  README.md  justfile  pyproject.toml  release-please-config.json
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: commitlint.yml  manage-stale-items.yml  osv-scanner.yml  release-please.yml  release-reminder.yml  test.yml
bc_rollbar_client/: __init__.py  client.py  config.py  exceptions.py
py_rollbar_client/: __init__.py
src/py_rollbar_client/: client.py  level.py
test/: test_client.py
