[project]
name = "py-rollbar-client"
version = "0.1.0"
description = "A lightweight Python wrapper for the Rollbar SDK"
requires-python = ">=3.11"
dependencies = ["rollbar"]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "rust-just>=1.38.0",
]

[tool.setuptools]
py-modules = []
packages = ["bc_rollbar_client"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
