[project]
name = "py-rollbar-client"
version = "0.3.1"
description = "A lightweight Python wrapper for the Rollbar SDK"
requires-python = ">=3.11"
dependencies = ["rollbar"]

[dependency-groups]
dev = [
    "ruff>=0.15.14",
    "mypy>=2.1.0",
    "pytest>=9.1.0",
    "rust-just>=1.51.0",
]

[tool.setuptools]
py-modules = []
packages = ["bc_rollbar_client"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
